--- a/ImageCore/ImageCore.vcxproj
+++ b/ImageCore/ImageCore.vcxproj
@@ -93,6 +93,7 @@
       <PreprocessorDefinitions>NDEBUG;IMAGECORE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
