--- a/.github/workflows/flawfinder.yml
+++ b/.github/workflows/flawfinder.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Run Flawfinder
         run: flawfinder --sarif ./ > flawfinder_results.sarif
         env:
-          PYTHONUTF8: "0"
-          LC_ALL:  "C.UTF-8"
+          PYTHONUTF8: "1"
+          PYTHONIOENCODING: utf-8 
 
       - name: Upload analysis results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
