--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -33,31 +33,22 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Configure CMake
         run: cmake -B ${{ env.build }}
 
-      # Build is not required unless generated source files are used
-      # - name: Build CMake
-      #   run: cmake --build ${{ env.build }}
-
-      - name: Initialize MSVC Code Analysis
-        uses: microsoft/msvc-code-analysis-action@04825f6d9e00f87422d6bf04e1a38b1f3ed60d99
-        # Provide a unique ID to access the sarif output path
+      # MSVC 분석 실행 + 자동 업로드
+      - name: Run MSVC Code Analysis
+        uses: microsoft/msvc-code-analysis-action@v1.0
         id: run-analysis
         with:
           cmakeBuildDirectory: ${{ env.build }}
-          # Ruleset file that will determine what checks will be run
-          ruleset: NativeRecommendedRules.ruleset
-
-      # Upload SARIF file to GitHub Code Scanning Alerts
-      - name: Upload SARIF to GitHub
-        uses: github/codeql-action/upload-sarif@v4
-        with:
-          sarif_file: ${{ steps.run-analysis.outputs.sarif }}
-
+          buildConfiguration: Release
+          # ⬇️ 핵심: 여기서 직접 업로드하도록 설정 (별도의 upload-sarif 단계 불필요)
+          uploadSarif: true 
+          
       # Upload SARIF file as an Artifact to download and view
       # - name: Upload SARIF as an Artifact
       #   uses: actions/upload-artifact@v4
